--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,56 @@
-.form-label {
-  color: #3a0000;
+body {
+  background-color: #e8ecf4;
+}
+
+h1 {
+  color: #16421c;
+  font-weight: bolder;
+  font-size: 60px;
+  font-family: 'Cabin', sans-serif;
+  font-family: 'Bree Serif', serif;
+  text-align: center;
+  margin-top: 20px;
+}
+
+h2 {
+  color: #a71c20;
   font-weight: bold;
+  font-size: 30px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+h3 {
+  color: #1a439a;
+}
+
+.card {
+  margin-top: 40px;
+  background: #f3d99b;
+}
+
+.btn-danger {
+  margin-top: 40px;
+}
+
+.card-text {
   font-size: 20px;
+  color: #16421c;
+}
+
+h4 {
+  font-family: 'Cabin', sans-serif;
+  font-family: 'Bree Serif', serif;
+}
+
+#orderConfirmation {
+  display: none;
+}
+
+img {
+  border-style: groove;
+  border-width: thick;
+  border-color: #1A439A;
+  border-radius: 20px;
 }
