--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-body {
-  background-color: #e8ecf4;
-}
-
 h1 {
   color: #16421c;
   font-weight: bolder;
@@ -23,11 +19,14 @@ h2 {
 
 h3 {
   color: #1a439a;
+  font-size: 25px;
+  margin-top: 20px;
 }
 
 .card {
   margin-top: 40px;
   background: #f3d99b;
+  padding: 20px;
 }
 
 .btn-danger {
@@ -53,4 +52,14 @@ img {
   border-width: thick;
   border-color: #1A439A;
   border-radius: 20px;
+  margin-top: 40px;
+}
+
+footer {
+  border-top-width: thin;
+  border-top-color: #a71c20;
+  border-top-style: solid;
+  padding: 10px;
+  margin-top: 60px;
+  margin-bottom: 10px;
 }
